# py-atom-unsaved-notes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  constants.py  models.py  utils.py
tests/: test_cli.py  test_models.py
